fix(css): Make content readable

--- a/scss/study.scss
+++ b/scss/study.scss
@@ -104,7 +104,7 @@ body>section {
         display: flex;
     }
     input {
-        width: 60%;
+        width: 100%;
         height: 42px;
         margin: 2rem auto;
         text-align: center;
